IDK a LOT of minor changes

--- a/adminHome.html
+++ b/adminHome.html
@@ -96,13 +96,23 @@
                 <th>Amount</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody align="center">
           <!-- PHP Goes Here -->
           <!-- <?php
-            echo '<td>1st</td>';
-            echo '<td>2nd</td>';
-            echo '<td>3rd</td>';
+            echo '<td></td>'';
           ?> -->
+          <tr>         
+            <td>M0001</td>
+            <td>Mangaluru</td>
+            <td>O+</td>
+            <td>2 Units</td> 
+          </tr>
+          <tr>
+            <td>M0002</td>
+            <td>Mangaluru</td>
+            <td>AB+</td>
+            <td>1 Units</td> 
+          </tr>         
         </tbody>
       </table>
     </div>
@@ -125,6 +135,19 @@
         </thead>
         <tbody>
           <!-- PHP Goes Here -->
+          <tr>
+            <td>REQ100001</td>
+            <td>John</td>
+            <td>Smith</td>
+            <td>johnsmith@email.com</td>
+            <td>9876543210</td>
+            <td>B+</td>
+            <td>2 Units</td>
+            <td>123 House, ABC Street</td>
+            <td>Mangaluru</td>
+            <td>35</td>
+            <td>Female</td>
+          </tr>
         </tbody>
       </table>
     </div>
@@ -147,6 +170,19 @@
         </thead>
         <tbody>
           <!-- PHP Goes Here -->
+          <tr>
+            <td>DNT100001</td>
+            <td>John</td>
+            <td>Smith</td>
+            <td>johnsmith@email.com</td>
+            <td>9876543210</td>
+            <td>B+</td>
+            <td>14-07-2020</td>
+            <td>123 House, ABC Street</td>
+            <td>Mangaluru</td>
+            <td>35</td>
+            <td>Male</td>
+          </tr>
         </tbody>
       </table>
     </div>
