--- a/enquire.html
+++ b/enquire.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="form-group col-lg-4">
                         <label class="font-weight-bold" style="color: #d9534f;">CITY:</label>
-                        <input type="number" name="city" class="form-control" />
+                        <input type="text" name="city" class="form-control" />
                     </div>
                 </div>
                 <div class="form-row">
