--- a/request.html
+++ b/request.html
@@ -109,7 +109,7 @@
                     </div>
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">CITY:</label>
-                        <input type="number" name="city" class="form-control" />
+                        <input type="text" name="city" class="form-control" />
                     </div>
                 </div>
                 <div class="form-row">
