--- a/request.html
+++ b/request.html
@@ -109,7 +109,15 @@
                     </div>
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">CITY:</label>
-                        <input type="text" name="city" class="form-control" />
+                        <select class="custom-select" name="city">
+                            <option>Bengaluru</option>
+                            <option>Chennai</option>
+                            <option>Hyderabad</option>
+                            <option>Kochi</option>
+                            <option>Mangaluru</option>
+                            <option>Mumbai</option>
+                            <option>Pune</option>
+                        </select>
                     </div>
                 </div>
                 <div class="form-row">
