Backend is complete

--- a/contactUs.html
+++ b/contactUs.html
@@ -59,8 +59,8 @@
             </div>
         </nav>
 
-        <form>
-            <div class="container container-form" style="margin-top: 100px;">
+        <form action="backend/contactus.php" method="POST">
+            <div class="container container-form" style="margin-top: 100px; margin-bottom: 50px;">
                 <h4 align="center" style="text-decoration: underline; margin-top: 100px;" class="form-title">Write us here:</h4>
                 <div class="form-row">
                     <div class="form-group col-lg-6">
@@ -71,23 +71,28 @@
                         <label class="font-weight-bold" style="color: #d9534f;">E-Mail:</label>
                         <input type="email" name="email" class="form-control" />
                     </div>
-                <div class="form-row" style="flex-wrap: nowrap;">
+                </div>
+                <div class="form-row">
                     <div class="form-group col-lg-12">
                         <label class="font-weight-bold" style="color: #d9534f;">Question:</label>
-                        <input type="text" name="question" class="form-control" ></input>
+                        <textarea name="question" rows="4" class="form-control"></textarea>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-lg-12" >                        
+                        <button class="btn btn-danger" style="width: 100%;" name="sbtbtn">Submit</button>
                     </div>
                 </div>
             </div>
-        </form>
-        
+        </form>        
         
         <div class="container">
             <div class="row">
-                <div class="col col-lg-4 contact-info" style="margin-top: 250px">
-                    <h4><u>Contact Us:</h4></u>
-                    <h5>Valachil, Mangalore, Karnataka 574143</h5>
+                <div class="col col-lg-4 contact-info" style="flex-wrap: nowrap; margin-top: 200px;">
+                    <h4 style="font-family: 'Muli', sans-serif;"><u>Contact Us:</h4></u>
+                    <h5 style="font-family: 'Muli', sans-serif;">Valachil, Mangalore, Karnataka 574143</h5>
                 </div>
-                <div class="col col-lg-4 map" style="margin-bottom: 70px;margin-top: 75px;">
+                <div class="col col-lg-4 map" style="margin-bottom: 70px;">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.5227798807255!2d74.93731361526939!3d12.874070220493058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba3585ea5927d6f%3A0xc65abe4f89ccf8ab!2sSrinivas%20Institute%20Of%20Technology(S.I.T.)!5e0!3m2!1sen!2sin!4v1594319744352!5m2!1sen!2sin" width="600" height="450" frameborder="1" style="border:1px solid black; padding: 2px;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
@@ -98,6 +103,6 @@
         </iframe>
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </html>
