Update records done

--- a/adminLogin.html
+++ b/adminLogin.html
@@ -69,6 +69,7 @@
                         id="exampleInputEmail1"
                         aria-describedby="emailHelp"
                         name="logininid"
+                        required=""
                     />
                 </div>
                 <div class="form-group">
@@ -78,6 +79,7 @@
                         class="form-control"
                         id="exampleInputPassword1"
                         name="password"
+                        required=""
                     />
                 </div>
                 <button
