--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
           <img
             class="request-img"
             src="images/request.png"
-            height="55%"
-            width="65%"
+            
           />
           <h5 class="tiles-label" align="center">Request Now</h5>
           <p align="center">
@@ -74,14 +73,15 @@
         </div>
       
         <div
-          class="main-functions col col-xl-4 col-lg-3"
+          class="main-functions col col-xl-4 col-lg-4"
           style="border: 1px solid black;"
         >
           <img
             class="enquire-img"
             src="images/enquire.jpg"
             height="57%"
-            width="65%"
+            width="100%"
+            style="padding-left: 10%;"
           />
           <h5 class="tiles-label" align="center">Enquire Now</h5>
           <p align="center">
@@ -99,7 +99,8 @@
             class="donate-img"
             src="images/donate.png"
             height="57%"
-            width="65%"
+            width="95%"
+            style="padding-left: 10%;"
           />
           <h5 class="tiles-label" align="center">Donate Blood Now!</h5>
           <p align="center">
@@ -181,7 +182,7 @@
                 <p>AB+</p>
             </div>
             <div class="col comp-chart">
-                <p>Everyone!</p>
+                <p>Anyone!</p>
             </div>
         </div>
         <div class="row">
@@ -200,7 +201,7 @@
                 <p>O-</p>
             </div>
             <div class="col comp-chart">
-                <p>Everyone!</p>
+                <p>Anyone!</p>
             </div>
             <div class="col comp-chart">
                 <p>O-</p>
