Fixed phone number fields to take 10 digits only

--- a/donate.html
+++ b/donate.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">PHONE:</label>
-                        <input type="phonenumber" name="phone" maxlength="9" class="form-control" />
+                        <input type="phonenumber" name="phone" maxlength="10" minlength="10" class="form-control" />
                     </div> 
                 </div>
                 <div class="form-row">
