--- a/request.html
+++ b/request.html
@@ -81,7 +81,7 @@
                     </div>
                     <div class="form-group col-lg-6">
                         <label class="font-weight-bold" style="color: #d9534f;">PHONE:</label>
-                        <input type="phonenumber" name="phone" maxlength="9" required="" class="form-control" />
+                        <input type="phonenumber" name="phone" maxlength="10" minlength="10" required="" class="form-control" />
                     </div>
                     
                 </div>
